fixed gameover black screen spacing

--- a/public/style.css
+++ b/public/style.css
@@ -180,18 +180,20 @@ input+p {
     z-index: 4;
 }
 
-#gameover-div {
+#game-container #gameover-div {
     height: calc(100% - 76px);
-    width: 100%;
+    width: calc(100% - 20px);
     position: absolute;
     background-color: black;
     z-index: 4;
     justify-content: center;
     align-content: center;
     display: none;
+    margin: 0;
+    padding: 0;
 }
 
-#gameover-div h1 {
+#game-container #gameover-div h1 {
     font-size: 70px;
     color: white;
     
